--- a/caca.css
+++ b/caca.css
@@ -1,7 +1,7 @@
 /* changes status from a circle to a border around pfp */
 /* online */
 .online-2S838R {
-    border: 2px solid #007a3d!important;
+    border: 2px solid #00d66b!important;
     background-color: transparent;
 }
 /* idle */
