--- a/caca.css
+++ b/caca.css
@@ -22,7 +22,7 @@
 /* streaming removing background and adding border for status */
 .streaming-2_dnHe {
     background-color: transparent;
-    border: 2px solid #593695;
+    border: 2px solid #c800ff;
 }
 /* position of those statuses in whos online list */
 .status-2s6iDp, .avatar-small .status, .channel-2QD9_O .status-1ibiUI, .container-2Thooq .da-wrapper .da-status {
